--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,121 @@
-body {
-  background-color: rgb(254, 179, 80);
+body, html {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+#grid {
+  display: grid;
+  grid-template-rows: 0.1fr 0.85fr 0.05fr;
+  height: 100%;
+  #header {
+    background-color: rgb(43, 43, 43);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    #search {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      height: 100%;
+      gap: 10px;
+    }
+    #input {
+      width: 100%;
+      height: 50%;
+      font-size: 20px;
+      font-weight: bold;
+      --webkit-appearance: none;
+      appearance: none;
+    }
+    #input.invalid {
+        border: 1px solid red;
+        background-color: rgb(246, 214, 219);
+      }
+    #input:focus {
+      --webkit-appearance: none;
+      appearance: none;
+      outline: none;
+    }
+    #submit {
+      height: 50%;
+    }
+    #change-unit {
+      width: 10%;
+      position: absolute;
+      right: 20px;
+    }
+  }
+  #main {
+    background-color: darkgrey;
+    padding: 10%;
+    color: white;
+    //font-size: 30px;
+    #date {
+      text-align: center;
+      padding: 10px 0;
+      font-size: 30px;
+    }
+    #hour {
+      text-align: center;
+      //padding: 0 30px 0 0;
+      font-size: 26px;
+    }
+    #first-line {
+      display: flex;
+      font-weight: bold;
+      padding: 10px 0;
+      position: relative;
+      font-size: 30px;
+      #city {
+        font-size: 36px;
+      }
+      #text-description {
+        position: relative;
+        top: 10px;
+        font-size: 30px;
+      }
+    }
+    #date-info {
+      display: flex;
+      flex-direction: column;
+      height: 20%;
+    }
+    #center {
+      display: flex;
+      flex-direction: column;
+      height: 80%;
+      justify-content: center;
+    }
+    #columns {
+      display: flex;
+      justify-content: center;
+      //padding: 30px 0 0 0;
+    }
+    #column1 {
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px;
+      font-size: 30px;
+    }
+    #column2 {
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px;
+      font-size: 26px;
+    }
+  }
+  #footer {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+  }
 }
